--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.opentracing.contrib</groupId>
   <artifactId>jdbi-opentracing</artifactId>
-  <version>0.6.2-SNAPSHOT</version>
+  <version>0.6.2</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -37,7 +37,7 @@
     <connection>scm:git:https://github.com/opentracing-contrib/java-jdbi.git</connection>
     <developerConnection>scm:git:https://github.com/opentracing-contrib/java-jdbi.git
     </developerConnection>
-    <tag>HEAD</tag>
+    <tag>0.6.2</tag>
   </scm>
 
   <licenses>
