--- a/opentracing-jdbi/pom.xml
+++ b/opentracing-jdbi/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>io.opentracing.contrib</groupId>
     <artifactId>jdbi-opentracing</artifactId>
-    <version>0.6.2</version>
+    <version>0.6.3-SNAPSHOT</version>
   </parent>
 
   <artifactId>opentracing-jdbi</artifactId>
